[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudflare-r2-webdav"
version = "0.1.0"
description = "A Python Cloudflare Worker that exposes an R2 bucket through WebDAV."
requires-python = ">=3.10"
dependencies = [
    "workers-py>=1.90.0",
]

[tool.setuptools]
py-modules = []

[tool.pyright]
include = ["src", "tests"]
